[package]
name = "compute"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.4.0"
borsh-derive = "1.4.0"
solana-program = "=1.18.9"

[dev-dependencies]
solana-program-test = "=1.18.9"
solana-sdk = "=1.18.9"

[lib]
name = "compute"
crate-type = ["cdylib", "lib"]
